Build additional css from fec-style

--- a/fec_eregs/templates/regulations/favicon.html
+++ b/fec_eregs/templates/regulations/favicon.html
@@ -2,4 +2,4 @@
   <link> tags, etc. which go in the header
 {% endcomment %}
 {% load static from staticfiles %}
-<link rel="shortcut icon" type="image/png" href="{%static "fec_eregs/favicon.png" %}"/>
+<link rel="shortcut icon" type="image/png" href="{%static "fec_eregs/img/favicon.png" %}"/>
