FEC masthead in header

--- a/fec_eregs/static/fec_eregs/fec-style/css/scss/main.scss
+++ b/fec_eregs/static/fec_eregs/fec-style/css/scss/main.scss
@@ -3,13 +3,22 @@
  */
 // Libraries
 @import 'lib/bourbon/bourbon';
+@import 'lib/neat/neat';
 @import 'fonts';
 @import 'variables';
+@import 'grid';
+
+@import 'mixins/utilities';
 
 // Base styling for html elements
 @import 'elements/links';
 @import 'elements/lists';
 @import 'elements/tables';
 @import 'elements/images';
+
+@import 'components/list-styles';
+
+@import 'modules/site-header';
+@import 'modules/nav';
 
 @import 'headings';
