--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -1,20 +1,18 @@
+{% load static from staticfiles %}
 <div class="main-head">
-    <div class="title">
-        <div class="site-title"><a href="{% url 'universal_landing' %}"><span class="e">e</span>Regulations</a></div>
-        {% if meta.cfr_title_number %}
-        <h2 class="reg-title"><a href="{% url 'regulation_landing_view' reg_part %}">{{ meta.cfr_title_number }} CFR Part {{ reg_part }} {% if meta.reg_letter %}(Regulation {{ meta.reg_letter }}){% endif %}</a></h2>
-        {% endif %}
-    </div> <!-- /reg-title -->
-    <nav class="app-nav">
-        <a href="#" class="mobile-nav-trigger">
-             <span class="cf-icon cf-icon-menu"></span>
-             <span class="icon-text">Mobile navigation</span>
-        </a>
-        <ul class="app-nav-list">
-            <li class="app-nav-list-item"><a href="{% url 'universal_landing' %}">Regulations</a></li>
-            <li class="app-nav-list-item"><a href="{% url 'about' %}">About</a></li>
-            <li class="app-nav-list-item logo-list-item">{% include "regulations/logo.html" %}</li>
-            <li class="app-nav-list-item org-title">{% include "regulations/org-title.html" %}</li>
-        </ul>
-    </nav>
+  <div class="disclaimer">
+    <span class="disclaimer__left">Looking for <a href="http://www.fec.gov">FEC.gov?</a></span>
+    <span class="disclaimer__center">
+      An official website of the United States Government.
+      <img alt="US flag signifying that this is a United States Federal Government website" src="{% static "fec_eregs/fec-style/img/us_flag_small.png" %}">
+    </span>
+    <span class="disclaimer__right">This site is currently in <a href="https://18f.gsa.gov/dashboard/stages/#beta">beta</a>.</span>
+  </div>
+  <div class="masthead">
+    <a href="/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
+    <ul class="utility-nav list--flat">
+      <li class="utility-nav__item"><a href="{% url 'about' %}">About</a></li>
+      <li class="utility-nav__item">Contact</li>
+    </ul>
+  </div>
 </div>
