--- a/fec_eregs/static/regulations/css/less/variables.less
+++ b/fec_eregs/static/regulations/css/less/variables.less
@@ -97,5 +97,5 @@ variables.less contains all theme variable / variable overrides
 
 @body_font: @base-font-family;
 
-@header_height: 0;
+@header_height: 98px;
 @subhead_height: 34px;
