--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -15,4 +15,59 @@
       <li class="utility-nav__item">Contact</li>
     </ul>
   </div>
+  <nav class="site-nav js-site-nav" aria-label="Site wide navigation">
+    <button for="nav-toggle" class="js-nav-toggle site-nav__button site-nav__button--left" aria-controls="site-menu">Menu</button>
+    <ul id="site-menu" class="site-nav__list">
+      <li class="site-nav__item site-nav__item--with-dropdown js-sublist-parent">
+        <a href="/data" class="site-nav__link is-current">Campaign finance data</a>
+        <button class="site-nav__link site-nav__toggle js-sublist-toggle" aria-haspopup="true">Campaign finance data</button>
+        <ul class="site-nav__dropdown" aria-label="submenu" aria-hidden="true">
+          <li class="site-nav__item">
+            <a class="t-bold site-nav__link" href="/data">Campaign finance data home</a>
+          </li>
+          <li class="t-bold site-nav__subtitle">Browse:</li>
+          <li class="site-nav__item">
+            <a class="site-nav__link site-nav__sublink" href="/data/candidates/?cycle=2012&amp;cycle=2014&amp;cycle=2016">Candidates</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link site-nav__sublink" href="/data/committees/">Committees</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link site-nav__sublink" href="/data/filings/">Filings</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link site-nav__sublink" href="/data/receipts/?max_date=04-13-2016">Receipts</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link site-nav__sublink" href="/data/disbursements/?max_date=04-13-2016">Disbursements</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link site-nav__sublink site-nav__sublink--last" href="/data/independent-expenditures/?max_date=04-13-2016">Independent expenditures</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="t-bold site-nav__link" href="/data/elections/">Find candidates by location</a>
+          </li>
+        </ul>
+      </li>
+      <li class="site-nav__item">
+        <a href="/registration-and-reporting/" class="site-nav__link">Registration and reporting</a>
+      </li>
+      <li class="site-nav__item">
+        <a href="/calendar" class="site-nav__link">Calendar</a>
+      </li>
+      <li class="site-nav__item is-disabled">
+        <a href="#" class="site-nav__link" tabindex="-1">(Page TBD)</a>
+      </li>
+      <li class="site-nav__item is-disabled">
+        <a href="#" class="site-nav__link" tabindex="-1">(Page TBD)</a>
+      </li>
+      <li class="site-nav__item utility-nav__item is-disabled">
+        <a href="#" class="site-nav__link">(About)</a>
+      </li>
+      <li class="site-nav__item utility-nav__item">
+        <a href="/contact-us/" class="site-nav__link is-disabled">Contact</a>
+      </li>
+    </ul>
+    <a title="Home" href="" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
+  </nav>
 </div>
