--- a/fec_eregs/static/fec_eregs/fec-style/css/scss/main.scss
+++ b/fec_eregs/static/fec_eregs/fec-style/css/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'lib/neat/neat';
 @import 'fonts';
 @import 'variables';
+@import 'icon-variables';
 @import 'grid';
 
 @import 'mixins/utilities';
