--- a/fec_eregs/templates/regulations/base.html
+++ b/fec_eregs/templates/regulations/base.html
@@ -2,5 +2,5 @@
 {% load static from staticfiles %}
 
 {% block preload %}
-<link rel="stylesheet" href="{% static "fec_eregs/fec-style/css/main.css"%}">
+<link rel="stylesheet" href="{% static "fec_eregs/css/main.css"%}">
 {% endblock %}
