--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -148,7 +148,7 @@ a {
   border-right: @subhead-primary-border;
 
   &.close {
-    top: @header_height + @subhead_height + 2 * 34px; // Header, subheader, 2 TOC list items
+    top: @header_height + @subhead_height + 2 * 34px + 1; // Header, subheader, 2 TOC list items
   }
 }
 
